[gd_scene load_steps=4 format=3 uid="uid://bd5wtux7wdrfv"]

[ext_resource type="Script" path="res://objects/falseblog.gd" id="1_iuwmi"]
[ext_resource type="Texture2D" uid="uid://pro7365xdblx" path="res://sprites/Sprite-0014.png" id="2_ppgy2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11vav"]
size = Vector2(32, 32)

[node name="falseblog" type="Area2D"]
script = ExtResource("1_iuwmi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ppgy2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_11vav")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
